--- a/src/style/commonStyles/_title.scss
+++ b/src/style/commonStyles/_title.scss
@@ -5,6 +5,10 @@
     &_48 {
         font-size: 48px;
     }
+    &_20 {
+        font-size: 20px;
+        line-height: 30px;
+    }
     &_16 {
         font-size: 16px;
         line-height: 24px;
