--- a/src/components/about/About.scss
+++ b/src/components/about/About.scss
@@ -10,6 +10,7 @@
         grid-auto-rows: minmax(245px, auto);
         gap: 0px 70px;
     }
+    
     &__photo {
         grid-row: 1/3;
         img {
@@ -25,7 +26,7 @@
         @include before_circle
     }
     .divider {
-        margin-top: 0;
+        margin: 0;
     }
     &__text { 
         margin-top: 20px;
