--- a/src/components/sidePanel/SidePanel.scss
+++ b/src/components/sidePanel/SidePanel.scss
@@ -12,6 +12,8 @@
         transition: 0.4s all;
     }
     &__link_instagram {
+        position: relative;
+        left: 3px;
         transform: rotate(-90deg);
         &:hover {
             transform: rotate(0deg) scale(1.4);
@@ -32,9 +34,9 @@
         width: 25px;
     }
     &__rotate {
-        transform: rotate(-90deg) translate(-35%,-272%);
+        transform: rotate(-90deg) translate(-35%,-235%);
         display: block;
         width: 150px;
-        font-size: 20px;
+        font-size: 18px;
     }
 }       
