--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -121,5 +121,5 @@ legend {
     width: 60px;
     height: 3px;
     background-color: $main-color;
-    margin-top: 25px;
+    margin: 25px auto 0 auto;
 }
