--- a/src/components/contacts/Contacts.scss
+++ b/src/components/contacts/Contacts.scss
@@ -11,6 +11,8 @@
     &__photo {
         img {
             width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
     }
     &__title {
@@ -76,9 +78,26 @@
     &__btn {
         font-size: 14px;
         line-height: 21px;
-        font-weight: bold;
+        font-weight: bold;  
     }
-    .btn_wrapper {
+    &__triggers {
+        display: grid;
+        grid-template-columns: repeat(2, auto);
         align-self: end;
+        grid-column: 1 / 3;
+        column-gap: 35px;
+    }
+    &__policy {
+        font-size: 14px;
+        line-height: 16px;
+        align-self: center;
+        display: flex;
+        input {
+            margin-right: 6px;
+        }
+        a {
+            color: #71AAEB;
+            text-decoration: underline;
+        }
     }
 }
