--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -24,6 +24,10 @@
 
 @import './base/animations';
 
+// MEDIA
+
+@import './media/media';
+
 // NORMALIZATION
 body,
 html {
@@ -117,9 +121,35 @@ legend {
     margin: 0 auto;
 }
 
+@media (max-width: 1200px) {
+    .container {
+        max-width: 960px;
+    }
+}
+@media (max-width: 992px) {
+    .container {
+        max-width: 720px;
+    }
+}
+@media (max-width: 768px) {
+    .container {
+        max-width: 540px;
+    }
+}
+@media (max-width: 576px) {
+    .container {
+        max-width: 100%;
+        padding: 0 10px;
+    }
+}
+
+// OTHERS
+
 .divider {
     width: 60px;
     height: 3px;
     background-color: $main-color;
     margin: 25px auto 0 auto;
 }
+
+
